# news-app

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: depends.py  main.py  settings.py
app/alembic/: env.py
app/alembic/versions/: 0947229b5b9b_initial_migration.py
app/database/: __init__.py  base.py  models.py
app/service/: news.py
