[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Alex Remnev <alexremnev2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
asyncpg = "^0.29.0"
sqlmodel = "^0.0.22"
alembic = "^1.13.2"
pydantic-settings = "^2.5.2"
uvicorn = "^0.30.6"
cachetools = "^5.5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
